--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@openai/agents": "^0.0.10",
     "dotenv": "^16.0.3",
     "next": "13.4.12",
+    "raw-body": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "twilio": "^4.14.0"
   },
   "devDependencies": {
+    "@types/raw-body": "^2.3.0",
     "typescript": "^5.3.3"
   }
 }
