--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "twilio": "^4.14.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.8",
     "@types/raw-body": "^2.3.0",
+    "@types/react": "^19.1.8",
     "typescript": "^5.3.3"
   }
 }
